force-app/main/default/objects/HCP_Invoices__c/HCP_Invoices__c.object-meta.xml
<CustomObject>
    <label>HCP Invoice</label>
    <nameField>
        <displayFormat>HCPI-{0000}</displayFormat>
        <label>HCP Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HCP Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>