force-app/main/default/objects/HCP_Invoices__c/fields/Agreement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Start_Date__c</fullName>
    <label>Agreement Start Date</label>
    <type>Date</type>
</CustomField>