force-app/main/default/objects/HCP_Invoices__c/fields/Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status__c</fullName>
    <label>Agreement Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>