force-app/main/default/objects/HCP_Invoices__c/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <label>Amount Due</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>