force-app/main/default/objects/HCP_Invoices__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <description>Import from Bill.com with Amount paid.</description>
    <label>Amount Paid</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>