force-app/main/default/objects/HCP_Invoices__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>used to indicate when an Invoice is re-sent / revised, and why.</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>