force-app/main/default/objects/HCP_Invoices__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For Individual Agreements, this is the HCP; for Practice Agreements, this is the Primary Contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HCP Invoices</relationshipLabel>
    <relationshipName>HCP_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>