force-app/main/default/objects/HCP_Invoices__c/fields/Contract_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review_Date__c</fullName>
    <formula>Health_Care_Practice__r.Agreement_Review_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Review Date</label>
    <type>Date</type>
</CustomField>