force-app/main/default/objects/HCP_Invoices__c/fields/Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid__c</fullName>
    <inlineHelpText>From Bill.com</inlineHelpText>
    <label>Date Paid</label>
    <type>Date</type>
</CustomField>