force-app/main/default/objects/HCP_Invoices__c/fields/Disbursement_Ref__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Ref__c</fullName>
    <inlineHelpText>Bill.com&apos;s Disbursement Reference</inlineHelpText>
    <label>Disbursement Ref</label>
    <length>10</length>
    <type>Text</type>
</CustomField>