force-app/main/default/objects/HCP_Invoices__c/fields/Health_Care_Practice__c.field-meta.xml
<CustomField>
    <fullName>Health_Care_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Health Care Practice</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>HCP_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>