force-app/main/default/objects/HCP_Invoices__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <label>Americord Rep</label>
    <length>120</length>
    <type>Text</type>
</CustomField>