force-app/main/default/objects/HCP_Invoices__c/fields/Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Rep_Email__c</fullName>
    <label>Americord Rep Email</label>
    <type>Email</type>
</CustomField>