force-app/main/default/objects/HCP_Invoices__c/fields/Rep_Phone__c.field-meta.xml
<CustomField>
    <fullName>Rep_Phone__c</fullName>
    <label>Americord Rep Phone</label>
    <type>Phone</type>
</CustomField>