force-app/main/default/objects/HCP_Invoices__c/fields/Rep_Title__c.field-meta.xml
<CustomField>
    <fullName>Rep_Title__c</fullName>
    <label>Americord Rep Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>