force-app/main/default/objects/HCP_Invoices__c/fields/Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Review_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used by Nina to track when she has completed her review. Once invoice is reviewed, it is available to LSR for approval.</description>
    <label>Review Completed</label>
    <type>Checkbox</type>
</CustomField>