force-app/main/default/objects/HCP_Invoices__c/fields/Revised__c.field-meta.xml
<CustomField>
    <fullName>Revised__c</fullName>
    <label>Revised</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>**Revised**</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>