force-app/main/default/objects/HCP_Invoices__c/fields/Send_Check_to__c.field-meta.xml
<CustomField>
    <fullName>Send_Check_to__c</fullName>
    <label>Send Check to:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payee</fullName>
                <default>true</default>
                <label>Payee</label>
            </value>
            <value>
                <fullName>Americord Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>