force-app/main/default/objects/HCP_Invoices__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <label>Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>