force-app/main/default/objects/HCP_Invoices__c/listViews/Already_Approved.listView-meta.xml
<ListView>
    <fullName>Already_Approved</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Health_Care_Practice__c</columns>
    <columns>Payee__c</columns>
    <columns>Amount_Due__c</columns>
    <columns>Rep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>2. Already Approved</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>