force-app/main/default/objects/HCP_Invoices__c/listViews/Paid.listView-meta.xml
<ListView>
    <fullName>Paid</fullName>
    <columns>NAME</columns>
    <columns>Amount_Due__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Date_Paid__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Disbursement_Ref__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Jean</value>
    </filters>
    <label>3. Paid</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>