force-app/main/default/objects/HCP_Invoices__c/listViews/Review_Required.listView-meta.xml
<ListView>
    <fullName>Review_Required</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Health_Care_Practice__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Review_Completed__c</columns>
    <columns>Contract_Review_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Review_Completed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Review Required</label>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>